# SuperMario

./: CMakeLists.txt  README.md  main.cpp  todo.txt
src/: game.cpp  game.hpp
src/engine/: components.hpp  manager.cpp  manager.hpp  system.cpp  system.hpp  window.cpp  window.hpp
src/engine/helpers/: checkers.hpp  debug.hpp  enums.hpp  functions.hpp  values.hpp
src/entities/: block.cpp  block.hpp  cloud.cpp  cloud.hpp  coin.cpp  coin.hpp  enemies.cpp  enemies.hpp  entities.cpp  entities.hpp  player.cpp  player.hpp
